Fixed clipped icons for most of the content type sprites by centralizing the definitions and setting line-height to 2em. There's still an issue where tal:replace="structure item_icon/html_tag" renders an img tag without src or points to the root, which makes the layout have an empty element. Probably needs to be fixed in the html_tag expression (e.g. if there isn't anything there, don't render). Should be good enough for beta3, but needs to be fixed before RC. See LiveSearch results + Advanced Workflow + Collection view (e.g. "Events") for examples of this. Refs #10409, #10466.
svn path=/plonetheme.sunburst/trunk/; revision=36340

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -232,12 +232,11 @@ q {
 
 /* @group Path indicator (breadcrumbs) */
 
-#breadcrumbs-you-are-here{}
-
+#breadcrumbs-you-are-here,
 #breadcrumbs-home,
 #breadcrumbs-current,
 #breadcrumbs-1 {
-	display: inline;
+	display: none;
 }
 #portal-breadcrumbs {
 	font-size: 80%;
@@ -1768,39 +1767,43 @@ div.overlay .formControls a {
 
 .contenttype-document {
 	background: no-repeat transparent 3px 4px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-event {
 	background: no-repeat transparent 3px -62px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-file {
 	background: no-repeat transparent 3px -128px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-folder {
 	background: no-repeat transparent 3px -194px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-image {
 	background: no-repeat transparent 3px -260px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-link {
 	background: no-repeat transparent 3px -326px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-news-item {
 	background: no-repeat transparent 3px -392px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-plone-site {	
 	background: no-repeat transparent 3px -456px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 .contenttype-topic {
 	background: no-repeat transparent 3px -524px url(contenttypes-sprite.png);
-	padding-left: 23px !important;
 }
 
+.contenttype-document,
+.contenttype-event,
+.contenttype-file,
+.contenttype-folder,
+.contenttype-image,
+.contenttype-link,
+.contenttype-news-item,
+.contenttype-plone-site,
+.contenttype-topic {
+	line-height: 2em;
+	display: inline-block;
+	padding-left: 23px !important;
+}
 /* @end */
